k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codecity
  labels:
    app.kubernetes.io/name: codecity
